# imagine_python

./: README.md  io.boite.imagine.json~  meson.build  python3-requirements.json  requirements.txt  settings-deploy.sh
data/: io.boite.imagine.appdata.xml.in  io.boite.imagine.gschema.xml  meson.build
po/: POTFILES  meson.build
src/: GObject_async.py  accelerator.py  custom.css  document.py  extensions.py  gtk_extensions.py  history.py  imagine.gresource.xml  imagine.in  io.boite.imagine.gschema.xml  layer_editor.py  layers.py  main.py  meson.build  resize_dialog.py  resize_dialog.ui  tools.py  window.py  window.ui
